--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,7 +1,6 @@
-<div *ngIf="product">
+<div class="product-details" *ngIf="product">
   <h1>{{ product.name }}</h1>
   <p>{{ product.description }}</p>
   <p>SKU: {{ product.sku }}</p>
   <p>Price: {{ product.cost | currency }}</p>
-  <!-- Muestra otras propiedades del producto según sea necesario -->
 </div>
