--- a/src/app/components/add-product/add-product.component.html
+++ b/src/app/components/add-product/add-product.component.html
@@ -36,7 +36,6 @@
       </mat-error>
     </mat-form-field>
 
-    <!-- Type Dropdown -->
     <mat-form-field appearance="fill">
       <mat-label>Type</mat-label>
       <mat-select formControlName="type">
@@ -47,26 +46,23 @@
       </mat-select>
     </mat-form-field>
 
-    <!-- Available Checkbox -->
     <mat-checkbox formControlName="available">Available</mat-checkbox>
 
-    <!-- Backlog Spinner -->
     <mat-form-field appearance="fill">
       <mat-label>Backlog</mat-label>
       <input matInput type="number" formControlName="backlog">
     </mat-form-field>
 
-    <!-- Custom Properties -->
     <div formArrayName="customProperties">
-      <div *ngFor="let property of customProperties.controls; let i = index">
+      <div *ngFor="let property of customProperties.controls; let i = index" [formGroupName]="i">
         <mat-form-field appearance="fill">
           <mat-label>Key</mat-label>
-          <input matInput [formGroupName]="i" formControlName="key">
+          <input matInput formControlName="key">
         </mat-form-field>
 
         <mat-form-field appearance="fill">
           <mat-label>Value</mat-label>
-          <input matInput [formGroupName]="i" formControlName="value">
+          <input matInput formControlName="value">
         </mat-form-field>
 
         <button mat-button (click)="removeCustomProperty(i)">Remove</button>
@@ -77,6 +73,6 @@
 </div>
 
 <div mat-dialog-actions>
-    <button mat-raised-button color="warn" (click)="closeDialog()">Cancel</button>
-    <button mat-raised-button color="primary" (click)="saveProduct()">Save</button>
+  <button mat-raised-button color="warn" (click)="closeDialog()">Cancel</button>
+  <button mat-raised-button color="primary" (click)="saveProduct()">Save</button>
 </div>
